@@ -66,8 +66,7 @@
 =app-text/kchmviewer-3.1_p2-r1
 =app-text/kding-0.4.3
 =app-text/poppler-0.14.5-r1
-=app-text/poppler-0.16.5
-=app-text/poppler-0.16.6
+=app-text/poppler-0.16.7
 =dev-db/hk_classes-0.8.3
 =dev-db/hk_classes-0.8.3-r1
 =dev-db/knoda-0.8.3
