@@ -1,8 +1,6 @@
 DIST poppler-0.14.5.tar.gz 1798194 RMD160 80d4441912b02d89777405ce03f8e175c4ccfa9e SHA1 e23b115e4ebc06c937318688b06a7c6b3319a00a SHA256 c805317c4c1a7080098ae8c7c2a1c1b8e2c784858fc2e04941878eeb8164814c
-DIST poppler-0.16.5.tar.gz 1950312 RMD160 dd28bec64bf19050ba2cbdd5a71fa398370de21a SHA1 29994e0b1be1110400d943f9b921675ba1a52eb5 SHA256 9f27b949c0cd52eef981654b8e13acd62e1e0f9a4bde4d96876da11ad84c39d9
-DIST poppler-0.16.6.tar.gz 1951216 RMD160 1833e5bbd5d3c4d920e902bf3d5cfefacacd5edc SHA1 caeef61868f214d8c600172fd4cb64f332121eee SHA256 2a3bb264f076c494e813cbdf4c9dc733a9755b9e2763e91fd9639cd3b00d4b3b
+DIST poppler-0.16.7.tar.gz 1952179 RMD160 279330e6feaf97a207f3396eab1af836d3d1f16c SHA1 26c735f863688f62b57d5159863fdad4272be89f SHA256 fab4e8af2d34d4142a718819fd747d40930b71ef520ee0e6bcc94e2c44f22bcd
 EBUILD poppler-0.14.5-r1.ebuild 2638 RMD160 dbb78383770f6c797380d1ab841f69d678d1b87c SHA1 cd25dd21ecff962647a5b8712e4d24b52ab343c5 SHA256 77680ac5bf9eb20528ed396a024a1619ab0c57785ea33a12a83fc34eecfb480a
-EBUILD poppler-0.16.5.ebuild 2821 RMD160 e465d381835715b7877f17f7ba4eee32552eb0f9 SHA1 1c9cd834e4a191106e84277f70fd143e2cbe541f SHA256 cbd81ee89cae49217b1b2e7f9f2ec703da6443d2a11952419bc2694634515bdf
-EBUILD poppler-0.16.6.ebuild 2821 RMD160 2f426f6d07e07430c7128b128f7f8c42ff5799b9 SHA1 bd77301b821fbe5b90d7ce8cc822f9d5df842c4f SHA256 7bae8fc43d8a22f53647870a6c73fe462c92c920299373de355c5cca363ad45a
-MISC ChangeLog 41344 RMD160 deb56e09b9d9565ac969be329fb65a825b3f0f86 SHA1 b4db7d40b88d3e6e1ca5d95d4708fd47c2689288 SHA256 02f415b2fe7c49ff24ba09260a6b80226c28692210f5b157a9562ed929c365bd
+EBUILD poppler-0.16.7.ebuild 2821 RMD160 91136fd0670b3b34b6c678a9d87f5f6ffaff3aee SHA1 58f2a54fbe9525bd19c8bd9d053bdbbdc2cb32db SHA256 55edc5831575032649d686d0f495f32eaa67d205f5cc9d9a50cc85fde76c7800
+MISC ChangeLog 41531 RMD160 3e4fb868892fde3926b20c4c4ded9fefc3b87cce SHA1 9d3ae808d43ed6c1cbfe0ee9208f20b42795b6e3 SHA256 74f17616e1ac437d14ac07125d884b47427c5a0c4aa04b65f3509bbddb704d98
 MISC metadata.xml 531 RMD160 bdae255e3871cac7966787a198b50d0f77180747 SHA1 8d191a0d9acc9c4494dd4b80ba72e420cf5489a4 SHA256 afef403de543eb24d44ec80c5353f932dffd16c5cd805f311a82089cdb4f4a99
